// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandTableRow renders correctly a command with shortcut 1`] = `
<table>
  <tbody>
    <CommandTableRow
      command={
        Command {
          "command": Array [
            CommandPart {
              "role": "COMMAND",
              "text": "commit",
            },
            CommandPart {
              "role": "NONE",
              "text": " ",
            },
            CommandPart {
              "role": "NONE",
              "text": "-m",
            },
            CommandPart {
              "role": "NONE",
              "text": "message",
            },
          ],
          "description": Array [
            CommandPart {
              "role": "NONE",
              "text": "Commit changes in the staging area with the given message.",
            },
          ],
          "id": "cmd-1",
          "scmBreezeShortcut": Array [
            CommandPart {
              "role": "COMMAND",
              "text": "gc",
            },
            CommandPart {
              "role": "NONE",
              "text": " ",
            },
            CommandPart {
              "role": "NONE",
              "text": "-m",
            },
            CommandPart {
              "role": "NONE",
              "text": "message",
            },
          ],
        }
      }
    >
      <tr
        className="command-row"
      >
        <td>
          <div
            className="command-content"
            id="cmd-1"
          >
            <span>
              <span>
                <span
                  className="command-part-git"
                >
                  git
                </span>
                 
                <span
                  className="command-part-command"
                  key="0"
                >
                  commit
                </span>
                 
                -m
                message
              </span>
              <br />
              <small>
                <span
                  className="command-part-command"
                  key="0"
                >
                  gc
                </span>
                 
                -m
                message
              </small>
            </span>
          </div>
        </td>
        <td>
          <div
            className="command-description"
          >
            <div>
              Commit changes in the staging area with the given message.
            </div>
            <div
              className="command-anchor-link"
            >
              <a
                href="#cmd-1"
              >
                #
              </a>
            </div>
          </div>
        </td>
      </tr>
    </CommandTableRow>
  </tbody>
</table>
`;

exports[`CommandTableRow renders correctly a command without shortcut 1`] = `
<table>
  <tbody>
    <CommandTableRow
      command={
        Command {
          "command": Array [
            CommandPart {
              "role": "COMMAND",
              "text": "commit",
            },
            CommandPart {
              "role": "NONE",
              "text": " ",
            },
            CommandPart {
              "role": "NONE",
              "text": "-m",
            },
            CommandPart {
              "role": "NONE",
              "text": "message",
            },
          ],
          "description": Array [
            CommandPart {
              "role": "NONE",
              "text": "Commit changes in the staging area with the given message.",
            },
          ],
          "id": "cmd-1",
          "scmBreezeShortcut": Array [],
        }
      }
    >
      <tr
        className="command-row"
      >
        <td>
          <div
            className="command-content"
            id="cmd-1"
          >
            <span>
              <span
                className="command-part-git"
              >
                git
              </span>
               
              <span
                className="command-part-command"
                key="0"
              >
                commit
              </span>
               
              -m
              message
            </span>
          </div>
        </td>
        <td>
          <div
            className="command-description"
          >
            <div>
              Commit changes in the staging area with the given message.
            </div>
            <div
              className="command-anchor-link"
            >
              <a
                href="#cmd-1"
              >
                #
              </a>
            </div>
          </div>
        </td>
      </tr>
    </CommandTableRow>
  </tbody>
</table>
`;
